--- a/HTMLFinalProjectCartPage.html
+++ b/HTMLFinalProjectCartPage.html
@@ -15,7 +15,7 @@
             <img src="Images/shirtCart3.png" />
         </div>
         <div class="checkout">
-            <form action="HTMLFinalProjectShippingPage.html">
+            <form action="https://htmlpreview.github.io/?https://github.com/Connor-J-M/mock-sites/blob/main/HTMLFinalProjectShippingPage.html">
                 <fieldset>
                     <text>Shipping: $9.78</text>
                     <br>
