--- a/HTMLFinalProjectCartPage.html
+++ b/HTMLFinalProjectCartPage.html
@@ -15,7 +15,7 @@
             <img src="Images/shirtCart3.png" />
         </div>
         <div class="checkout">
-            <form action="https://htmlpreview.github.io/?https://github.com/Connor-J-M/mock-sites/blob/main/HTMLFinalProjectShippingPage.html">
+            <form>
                 <fieldset>
                     <text>Shipping: $9.78</text>
                     <br>
@@ -27,9 +27,9 @@
                     <input type="text" id="coupon" name="coupon">
                     <hr>
                     <br>
-                    <button type="submit" id="checkout" name="checkout" value="checkout">checkout</button>
+                    <button type="submit" id="checkout" name="checkout" value="checkout" onclick="href='HTMLFinalProjectShippingPage.html'">checkout</button>
                     <hr>
-                    <button type="button" id="return" name="return" value="return" onclick="location.href='HTMLFinalProjectItemPage.html'">return to shopping</button>
+                    <button type="button" id="return" name="return" value="return" onclick="href='HTMLFinalProjectItemPage.html'">return to shopping</button>
                  </fieldset>
             </form>
         </div>
