--- a/HTMLFinalProjectCartPage.html
+++ b/HTMLFinalProjectCartPage.html
@@ -27,9 +27,9 @@
                     <input type="text" id="coupon" name="coupon">
                     <hr>
                     <br>
-                    <button type="button" id="checkout" name="checkout" value="checkout" onclick="window.location.href='https://htmlpreview.github.io/?https://github.com/Connor-J-M/mock-sites/blob/main/HTMLFinalProjectShippingPage.html'">checkout</button>
+                    <button type="button" id="checkout" name="checkout" value="checkout" onclick="window.location.href='HTMLFinalProjectShippingPage';">checkout</button>
                     <hr>
-                    <button type="button" id="return" name="return" value="return" onclick="window.location.href='https://htmlpreview.github.io/?https://github.com/Connor-J-M/mock-sites/blob/main/HTMLFinalProjectItemPage.html'">return to shopping</button>
+                    <button type="button" id="return" name="return" value="return" onclick="window.location.href='HTMLFinalProjectItemPage.html';">return to shopping</button>
                  </fieldset>
             </form>
         </div>
