--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <h2>
   This is the link to my mock website STANKSHIRTS.com
 <h2>
-
+<a href="HTMLFinalProjectItemPage.html"> STANKSHIRTS.com </a>
 <h1>
   Thanks for visiting!
 </h1>
