--- a/HTMLFinalProjectShippingPage.html
+++ b/HTMLFinalProjectShippingPage.html
@@ -12,7 +12,7 @@
         </div>
 
         <div class="centerFlex">
-            <form action="HTMLFinalProjectThankPage.html">
+            <form>
                 <label for="email">Enter Email:</label>
                 <br>
                 <input type="text" id="email" />
@@ -26,7 +26,7 @@
                 <input type="text" id="cardNum" />
                 <br>
                 <hr>
-                <button type="submit" id="confirm" value="confirm">click here to confirm</button>
+                <button type="submit" id="confirm" value="confirm" onclick="location.href='HTMLFinalProjectThankPage'">click here to confirm</button>
             </form>
         </div>
     </div>
