--- a/HTMLFinalProjectShippingPage.html
+++ b/HTMLFinalProjectShippingPage.html
@@ -26,7 +26,7 @@
                 <input type="text" id="cardNum" />
                 <br>
                 <hr>
-                <button type="submit" id="confirm" value="confirm" onclick="location.href='HTMLFinalProjectThankPage'">click here to confirm</button>
+                <button type="button" id="confirm" value="confirm" onclick="location.href='HTMLFinalProjectThankPage'">click here to confirm</button>
             </form>
         </div>
     </div>
