--- a/HTMLFinalProjectCartPage.html
+++ b/HTMLFinalProjectCartPage.html
@@ -27,7 +27,7 @@
                     <input type="text" id="coupon" name="coupon">
                     <hr>
                     <br>
-                    <button type="button" id="checkout" name="checkout" value="checkout" onclick="location.href='HTMLFinalProjectShippingPage';">checkout</button>
+                    <a href="HTMLFinalProjectShippingPage.html"><button type="button" id="checkout" name="checkout" value="checkout">checkout</button></a>
                     <hr>
                     <button type="button" id="return" name="return" value="return" onclick="location.href='HTMLFinalProjectItemPage'">return to shopping</button>
                  </fieldset>
