--- a/HTMLFinalProjectCartPage.html
+++ b/HTMLFinalProjectCartPage.html
@@ -29,7 +29,7 @@
                     <br>
                     <a href="HTMLFinalProjectShippingPage.html"><button type="button" id="checkout" name="checkout" value="checkout">checkout</button></a>
                     <hr>
-                    <button type="button" id="return" name="return" value="return" onclick="location.href='HTMLFinalProjectItemPage'">return to shopping</button>
+                    <a href="HTMLFinalProjectItemPage.html"><button type="button" id="return" name="return" value="return">return to shopping</button></a>
                  </fieldset>
             </form>
         </div>
