--- a/HTMLFinalProjectItemPage.html
+++ b/HTMLFinalProjectItemPage.html
@@ -8,13 +8,12 @@
         <title>StankShirts.com</title>
     </head>
 
-    <link rel="stylesheet" href="CSSFinalProject.css" />
+    <link rel="stylesheet" href="CSSFinalProject.css" /> 
 
     <body>
             <nav>
             <a href="HTMLFinalProjectItemPage.html"><img src="Images/stankShirtsHeaderNEW.png" alt="Stank Shirts Logo" class = "center"/></a>
-            <img src = "Images/stankShirtsSearch.png" width = "50" height = "50" class = "buttons">
-            <a href = "https://htmlpreview.github.io/?https://github.com/Connor-J-M/mock-sites/blob/main/HTMLFinalProjectCartPage.html"><img src = "Images/stankShirtsCart.png" width = "50" height = "50" class = "buttons"></a>
+            <a href = "https://htmlpreview.github.io/?https://github.com/Connor-J-M/mock-sites/blob/main/HTMLFinalProjectCartPage.html"><img src = "Images/STANKCART.png" width = "50" height = "50" class = "buttons"></a>
             </nav> 
 
             <div class= "items">
