--- a/HTMLFinalProjectThankPage.html
+++ b/HTMLFinalProjectThankPage.html
@@ -6,13 +6,14 @@
     <link rel="stylesheet" href="CSSFinalProject.css" />
 </head>
 <body>
-    <div>
         <div>
             <a href="HTMLFinalProjectItemPage.html"><img src="Images/stankShirtsHeaderNEW.png" alt="Stank Shirts Logo" class = "center"/></a>
         </div>
         <div class="banner">
-            <img src="Images/thankYou.png" alt="Thank you for your purchase!">
+            <img src="Images/thankYouCROP.png" alt="Thank you for your purchase!">
         </div>
-    </div>
+
+        <h1 class="center">Your order is on its way!</h1>
+        <h2 class="center"><a href="HTMLFinalProjectItemPage.html">Click here to continue shopping</a></h2>
 </body>
 </html>
