--- a/HTMLFinalProjectShippingPage.html
+++ b/HTMLFinalProjectShippingPage.html
@@ -4,15 +4,15 @@
 <head>
     <title>Stank Shirts Shipping Info</title>
     <link rel="stylesheet" href="CSSFinalProject.css" />
+    <link rel="icon" type="image/x-icon" href="Images/StankShirtsIcon.ico">
 </head>
 <body>
-    <div>
-        <div>
-            <a href="HTMLFinalProjectItemPage.html"><img src="Images/stankShirtsHeaderNEW.png" alt="Stank Shirts Logo" class = "center"/></a>
-        </div>
+        <nav>
+            <a href="Index.html"><img src="Images/stankShirtsHeaderNEW.png" alt="Stank Shirts Logo" class = "center"/></a>
+        </nav>
 
         <div class="centerFlex">
-            <form>
+            <form action="HTMLFinalProjectThankPage.html">
                 <label for="email">Enter Email:</label>
                 <br>
                 <input type="text" id="email" />
@@ -26,10 +26,10 @@
                 <input type="text" id="cardNum" />
                 <br>
                 <hr>
-                <a href="HTMLFinalProjectThankPage.html"><button type="button" id="confirm" value="confirm">click here to confirm</button></a>
+                <button type="submit" id="confirm" value="confirm">click here to confirm</button>
+                <button type="reset" id="reset" value="reset">Click here to clear the form</button>
             </form>
         </div>
-    </div>
 
 </body>
 </html>
