--- a/HTMLFinalProjectThankPage.html
+++ b/HTMLFinalProjectThankPage.html
@@ -4,16 +4,22 @@
 <head>
     <title>Stank Shirt Thank You</title>
     <link rel="stylesheet" href="CSSFinalProject.css" />
+    <link rel="icon" type="image/x-icon" href="Images/StankShirtsIcon.ico">
 </head>
 <body>
+    <div>
         <div>
-            <a href="HTMLFinalProjectItemPage.html"><img src="Images/stankShirtsHeaderNEW.png" alt="Stank Shirts Logo" class = "center"/></a>
+            <a href="Index.html"><img src="Images/stankShirtsHeaderNEW.png" alt="Stank Shirts Logo" class = "center"/></a>
         </div>
         <div class="banner">
-            <img src="Images/thankYouCROP.png" alt="Thank you for your purchase!">
-        </div>
 
-        <h1 class="center">   Your order is on its way!</h1>
-        <h2 class="center"><a href="HTMLFinalProjectItemPage.html">Click here to continue shopping</a></h2>
+            <img src="Images/thankYou.png" alt="Thank you for your purchase!"  style="height: 50%; width: 50%; margin-left: 25%;" usemap="#thankYouMap">
+
+            <map name="thankYouMap">
+                <area shape="rect" coords="225,350,500,550" alt="Back to shoping" href="Index.html">
+                <area shape="rect" coords="150,350,450,550" alt="Back to cart page" href="HTMLFinalProjectCartPage.html">
+            </map>
+        </div>
+    </div>
 </body>
 </html>
