--- a/index.html
+++ b/index.html
@@ -1,14 +1,30 @@
-<!DOCTYPE html>
-<html>
-<title> Connor McNurlan Websites </title>
-<body>
-<h2>
-  This is the link to my mock website STANKSHIRTS.com
-<h2>
-<a href="HTMLFinalProjectItemPage.html"> STANKSHIRTS.com </a>
-<h1>
-  Thanks for visiting!
-</h1>
-</body>
+﻿<!DOCTYPE html>
 
+<html>
+    <script src="finalProject.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <head>
+        <title>StankShirts.com</title>
+        <link rel="icon" type="image/x-icon" href="Images/StankShirtsIcon.ico">
+        <link rel="stylesheet" href="CSSFinalProject.css" />
+    </head>
+
+    <body>
+            <nav>
+            <a href="Index.html"><img src="Images/stankShirtsHeaderNEW.png" alt="Stank Shirts Logo" class = "center"/></a>
+            <img src = "Images/stankShirtsSearch.png" width = "50" height = "50" class = "buttons">
+            <a href = "htmlFinalProjectCartPage.html"><img src = "Images/stankShirtsCart.png" width = "50" height = "50" class = "buttons"></a>
+            </nav> 
+
+            <div class= "items">
+                <img src="Images/shirt11.png" class = "itemCool" id="1" />  
+                <img src="Images/shirt22.png" class = "itemCool" id="2"/>
+                <img src="Images/shirt33.png" class = "itemCool" id="3"/>
+                <img src="Images/pants11.png" class = "itemCool" id="4"/>
+                <img src="Images/stankHat11.png" class = "itemCool" id="5"/>
+                <img src="Images/stankHoodie11.png" class = "itemCool" id="6"/>
+            </div>
+
+    </body>
 </html>
